--- a/GridUnlock/GridUnlock.csproj
+++ b/GridUnlock/GridUnlock.csproj
@@ -32,14 +32,29 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\CollectionBase.cs" />
+    <Compile Include="GridUnlock.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Key.cs" />
+    <Compile Include="KeyPoint.cs" />
+    <Compile Include="KeyPointCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\KeyEncrypt.cs" />
+    <Compile Include="Utility\KeyGenerator.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="GridUnlock.resx">
+      <DependentUpon>GridUnlock.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
