--- a/DemoLauncher/DemoLauncher.csproj
+++ b/DemoLauncher/DemoLauncher.csproj
@@ -77,6 +77,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GridUnlock\GridUnlock.csproj">
+      <Project>{0F054E27-D7A6-4C10-B893-D75D1CFE447B}</Project>
+      <Name>GridUnlock</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
